option java_package = "com.protocol";
//option java_outer_classname = "AccountPB";
//10001
message CSLogin
{
	required string accountId 			= 1;
	required string url      			= 2;
	required string ip       			= 3;
	required string localization       			= 4; // 本地化，语言
}
message SCLogin
{
	required string sessionId		= 1;
	required int64 serverTime			= 2; // 服务器时间，用它在客户端计算出时间差
}
message CSLogout
{
	required string accountId 			= 1;
}
message SCLogout
{

}
// 被顶下
message SCBeTakePlace
{
}
// 获取登陆信息，
// 1、当第一次登陆的时候，获取自己要在哪里注册
// 2、前端清理了缓存，需要重新获取自己账号所在服务器
message CSGetLoginInfo
{
	required string deviceId 			= 1;
}
message SCGetLoginInfo
{
	required int32 serverId		= 1;
	required string ip		= 2;
	required int32 port		= 3;
	required string accountId		= 4;
}
