option java_package = "com.protocol";
//option java_outer_classname = "RoomPB";
//10201
message CSEnterRoom{
	required string accountId 			= 1;
}
message SCEnterRoom{

}
message CSOutRoom{

}
message SCOutRoom{

}


